@@ -104,6 +104,12 @@ const SimpleCCMOptions =
      * @default
      */
     binaryCoder : 'MPCK',
+
+    /**
+     * Enables marking as SecureChannel through options.
+     * @default
+     */
+    secureChannel : false,
 };
 
 /**
